vendored_parsers/tree-sitter-prisma/corpus/generator.txt
========================
Simple Generator definition
========================

generator photon {
  provider = "nexus-prisma"
}

---

(program
  (generator_declaration
    (identifier)
    (statement_block
      (assignment_expression
        (variable)
        (string)
      )
    )
  )
)
